# pyo3-test

./: Cargo.toml  README.md  pixi.toml  pyproject.toml
src/: lib.rs
