[project]
name = "pyo3-test"
requires-python = ">=3.12"
dependencies = [
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[tool.uv]
managed = true

# This tells uv to rebuild the Rust code if any .rs or Cargo files change
cache-keys = [{ file = "Cargo.toml" }, { file = "src/**/*.rs" }]

[dependency-groups]
dev = [
    "maturin>=1.12",
]
